# MusicPyaler

./: .gitignore  CMakeLists.txt  main.cpp
include/: MusicHttp.h  MusicPlayer.h  MusicSearch.h  musicwindow.h
sources/: resource.qrc
sources/music/: music.json
sources/music/七里香/: music.json
sources/music/搁浅/: 周杰伦-搁浅.lrc
sources/music/自定义/: music.json
sources/music/自定义/星座书上/: 许嵩-星座书上.lrc
src/: CMakeLists.txt  MusicHttp.cpp  MusicPlayer.cpp  MusicSearch.cpp  musicwindow.cpp
ui/: musicwindow.ui
